In-tree kernel module replacement (#354)
This PR implements in-tree kernel module replacement per
user request:
1) Add a boolean flag to KernelMapping and to Container definition
   In case KernelMapping's field is defined, it takes precedence over
   Container field
2) In case the boolean flag is defined, the PostStart command will now
   first try to remove in-tree kernel module, and only after that will try
   to insert the kernel module stored in the container image
3) unit-test

Upstream-Commit: 92704d056b5d268daf9c0ca3250024c32c2a637e

--- a/config/crd/bases/kmm.sigs.x-k8s.io_modules.yaml
+++ b/config/crd/bases/kmm.sigs.x-k8s.io_modules.yaml
@@ -2023,6 +2023,11 @@ spec:
                           Defaults to Always if :latest tag is specified, or IfNotPresent
                           otherwise. Cannot be updated. More info: https://kubernetes.io/docs/concepts/containers/images#updating-images'
                         type: string
+                      inTreeRemoval:
+                        description: InTreeRemoval signifies if the an in-tree kernel
+                          module should be removed (if present) before loading the
+                          kernel module from the ContainerImage
+                        type: boolean
                       kernelMappings:
                         description: KernelMappings is a list of kernel mappings.
                           When a node's labels match Selector, then the KMM Operator
@@ -2117,6 +2122,11 @@ spec:
                               description: ContainerImage is the name of the DriverContainer
                                 image that should be used to deploy the module.
                               type: string
+                            inTreeRemoval:
+                              description: InTreeRemoval signifies if the an in-tree
+                                kernel module should be removed (if present) before
+                                loading the kernel module from the ContainerImage
+                              type: boolean
                             literal:
                               description: Literal defines a literal target kernel
                                 version to be matched exactly against node kernels.
