change the name of skipper build container to kmm-operator-build (#367)
Upstream-Commit: d8ed3488388a91421d689f5e072124f2af967894

--- a/skipper.yaml
+++ b/skipper.yaml
@@ -2,7 +2,7 @@ registry: quay.io
 build-container-image: kmm-operator-build
 
 containers:
-  special-resource-operator-build: Dockerfile.kmm-operator-build
+  kmm-operator-build: Dockerfile.kmm-operator-build
 volumes:
     - $HOME/.cache/go-build:$HOME/.cache/go-build
     - $HOME/go/pkg:/go/pkg
