--- a/config/crd/bases/kmm.sigs.x-k8s.io_nodemodulesconfigs.yaml
+++ b/config/crd/bases/kmm.sigs.x-k8s.io_nodemodulesconfigs.yaml
@@ -56,6 +56,10 @@ spec:
                           type: string
                         inTreeModuleToRemove:
                           type: string
+                        inTreeModulesToRemove:
+                          items:
+                            type: string
+                          type: array
                         insecurePull:
                           description: When InsecurePull is true, the container image
                             can be pulled without TLS.
@@ -195,6 +199,10 @@ spec:
                           type: string
                         inTreeModuleToRemove:
                           type: string
+                        inTreeModulesToRemove:
+                          items:
+                            type: string
+                          type: array
                         insecurePull:
                           description: When InsecurePull is true, the container image
                             can be pulled without TLS.
